--- a/templates/prime_editor.html
+++ b/templates/prime_editor.html
@@ -13,10 +13,10 @@
 
 {% block content %}
       <form method="POST">
-        <table class="table table-sm w-auto">
+        <table class="table table-sm">
           <tr>
-            <th>Date</th>
-            <th class="col-6">Effects</th>
+            <th class="col-1">Date</th>
+            <th class="col-11">Effects</th>
           </tr>
           <tr>
             <td>
