--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -14,7 +14,7 @@
     <div class="col scoreboard">
       <table id="summary_table" class="table table-sm table-bordered">
         <tr>
-          <th class="header-right" colspan="9">Date</th>
+          <th class="header-right" colspan="10">Date</th>
           {% for war in t.wars %}
           <td class="sticky-top-1 min-width {{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {% if current_user.officer %}
@@ -26,7 +26,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Opponent</th>
+          <th class="header-right" colspan="10">Opponent</th>
           {% for war in t.wars %}
           <td class="sticky-top-2 {{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             <a href="{{url_for('scoreboard', alliance_id=t.alliance, opponent_id=war.opponent_id)}}">{{war.opponent.name}}</a>
@@ -34,7 +34,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">League</th>
+          <th class="header-right" colspan="10">League</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.leagueText()}}
@@ -42,7 +42,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Tracked</th>
+          <th class="header-right" colspan="10">Tracked</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.trackedText()}}
@@ -51,7 +51,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Our Points</th>
+          <th class="header-right" colspan="10">Our Points</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.our_score}}
@@ -59,7 +59,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Opponent Points</th>
+          <th class="header-right" colspan="10">Opponent Points</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}}">
             {{war.opp_score}}
@@ -67,7 +67,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Base 1</th>
+          <th class="header-right" colspan="10">Base 1</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}} text-nowrap">
               {{war.b1p.name}}
@@ -78,7 +78,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Base 2</th>
+          <th class="header-right" colspan="10">Base 2</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}} text-nowrap">
             {{war.b2p.name}}
@@ -89,7 +89,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Base 3</th>
+          <th class="header-right" colspan="10">Base 3</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}} text-nowrap">
             {{war.b3p.name}}
@@ -100,7 +100,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Base 4</th>
+          <th class="header-right" colspan="10">Base 4</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}} text-nowrap">
             {{war.b4p.name}}
@@ -111,7 +111,7 @@
           {% endfor %}
         </tr>
         <tr>
-          <th class="header-right" colspan="9">Base 5</th>
+          <th class="header-right" colspan="10">Base 5</th>
           {% for war in t.wars %}
           <td class="{{war.winClass()}} {{war.trackedClass()}} cls{{war.id}} text-nowrap">
             {{war.b5p.name}}
@@ -134,6 +134,7 @@
           <th class="col-collapse sticky-top-1" id="col-toggle" title="Show/hide additional averages"></th>
           <th class="summary_sort sticky-top-left {{player_sort}}" id="player_sort">Player</th>
           <th class="summary_sort sticky-top-1 {{tracked_sort}}" id="tracked_sort">Tracked</th>
+          <th class="summary_sort sticky-top-1 sorted-none" id="raw_sort">Raw</th>
           <th class="summary_sort sticky-top-1 sorted-none" id="untracked_sort">Untracked</th>
           <th class="summary_sort sticky-top-1 sorted-none" id="prime_sort">Prime</th>
           <th class="summary_sort sticky-top-1 sorted-none" id="cyber_sort">Cybertron</th>
@@ -148,6 +149,7 @@
             <input type="hidden" id="activeAverage" value="true">
           </td>
           <td class="light avgScore" id="avg_tracked"></td>
+          <td class="light avgScore" id="avg_raw"></td>
           <td class="light avgScore" id="avg_untracked"></td>
           <td class="light avgScore" id="avg_prime"></td>
           <td class="light avgScore" id="avg_cyber"></td>
@@ -185,11 +187,12 @@
             <input type="hidden" id="active{{loop.index}}" value="{{player.alliance_id == t.alliance}}">
           </td>
           <td class="light font-weight-bold">{{player.trackedAvg}}</td>
+          <td class="light font-weight-bold">{{player.rawAvg}}</td>
           <td class="light">{{player.untrackedAvg}}</td>
           <td class="light">{{player.primeAvg}}</td>
           <td class="light">{{player.cyberAvg}}</td>
           <td class="light">{{player.allAvg}}</td>
-          <td class="light">{{player.avg_drops}}</td>
+          <td class="light">{{player.avg_drops|round(1)}}</td>
           <td class="light">{{player.strikes}}</td>
           {% for war in t.wars %}
           {% set score = player.scoresRange[war.id].score %}
