--- a/templates/login.html
+++ b/templates/login.html
@@ -33,6 +33,8 @@
 
         <div class="form-group row col">
           {{ form.submit(class_='btn btn-primary') }}
+          {{ form.remember_check(class_='form-control remember-check') }}
+          {{ form.remember_check.label(class_='remember-label') }}
         </div>
 
         <div class="login-signup">
