--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,9 @@
       </div>
       <div class="navbar-collapse">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item {% block nav_donate %}{% endblock %}">
+            <a class="nav-link" href="{{url_for('donate')}}">$</a>
+          </li>
           {% if current_user.is_authenticated %}
           <li class="nav-item {% block nav_help %}{% endblock %}">
             <a class="nav-link" data-toggle="modal" data-target="#help" href="#">?</a>
