--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,7 @@
                 <a class="dropdown-item {% block nav_war_calculator %}{% endblock %}" href="{{url_for('war_calculator')}}">War Calculator</a>
                 <a class="dropdown-item {% block nav_bundle %}{% endblock %}" href="{{url_for('bundle_calculator')}}">Bundle Calculator</a>
                 <a class="dropdown-item {% block nav_xp %}{% endblock %}" href="{{url_for('xp_calculator')}}">XP Calculator</a>
+                <a class="dropdown-item {% block nav_odds %}{% endblock %}" href="{{url_for('odds_simulator')}}">Odds Simulator</a>
             </div>
           </li>
           {% if current_user.officer %}
