Added Player Note.  Added Scorched family score imports.

--- a/templates/player.html
+++ b/templates/player.html
@@ -17,6 +17,8 @@
       <br />
       <div id="chart_Score"></div>
 
+      <div class="col-6">{{t.player.note}}</div>
+
       <div class="col-6" id="alliance_history_toggle">
         Alliance History +<br /><br />
       </div>
