--- a/templates/base.html
+++ b/templates/base.html
@@ -174,6 +174,7 @@
             <input class="hide" type="checkbox" name="min_wars_check">
             <input class="form-control min-wars" type="number" id="min_wars" value="4">
             <label for="min_wars" class="update-label">Min Wars</label>
+            <input class="btn btn-primary" type="button" name="reorganize" value="Reorganize" data-toggle="modal" data-target="#reorg">
             {% endblock %}
           </div>
         </div>
